Get vessel length less than. #6

--- a/NLP Python Jupyter Notebooks/Get scope - Vessel length overall/Get scope - Vessel length overall.ipynb
+++ b/NLP Python Jupyter Notebooks/Get scope - Vessel length overall/Get scope - Vessel length overall.ipynb
@@ -4911,7 +4911,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "nltk_concordance_index = nltk.ConcordanceIndex(word_tokens)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -4924,13 +4933,12 @@
    ],
    "source": [
     "# get the index of a searched word\n",
-    "c = nltk.ConcordanceIndex(word_tokens)\n",
-    "print([offset for offset in c.offsets(\"Section\")])"
+    "print([offset for offset in nltk_concordance_index.offsets(\"Section\")])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -4943,13 +4951,12 @@
    ],
    "source": [
     "# get the word before a searched word\n",
-    "c = nltk.ConcordanceIndex(word_tokens)\n",
-    "print([word_tokens[offset - 1] for offset in c.offsets(\"Section\")])"
+    "print([word_tokens[offset - 1] for offset in nltk_concordance_index.offsets(\"Section\")])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -4963,8 +4970,274 @@
    "source": [
     "# get the word after a searched word\n",
     "# Result: this is the Section numbers that we are looking for\n",
-    "c = nltk.ConcordanceIndex(word_tokens)\n",
-    "print([word_tokens[offset + 1] for offset in c.offsets(\"Section\")])"
+    "print([word_tokens[offset + 1] for offset in nltk_concordance_index.offsets(\"Section\")])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[[8, 'Section', '7', '.'],\n",
+       " [115, 'Section', '8', '.'],\n",
+       " [237, 'Section', '9', '.'],\n",
+       " [499, 'Section', '10', '.'],\n",
+       " [832, 'Section', '11', '.'],\n",
+       " [920, 'Section', '12', '.'],\n",
+       " [1238, 'Section', '13', '.'],\n",
+       " [1303, 'Section', '14', '.'],\n",
+       " [1492, 'Section', '15', '.'],\n",
+       " [1754, 'Section', '16', '.'],\n",
+       " [1854, 'Section', '17', '.'],\n",
+       " [2050, 'Section', '18', '.'],\n",
+       " [2089, 'Section', '19', '.'],\n",
+       " [2127, 'Section', '20', '.'],\n",
+       " [2279, 'Section', '21', '.'],\n",
+       " [2407, 'Section', '22', '.'],\n",
+       " [2497, 'Section', '23', '.'],\n",
+       " [2698, 'Section', '24', '.'],\n",
+       " [3028, 'Section', '25', '.']]"
+      ]
+     },
+     "execution_count": 55,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#\n",
+    "# Liste med Section og index\n",
+    "#\n",
+    "\n",
+    "section_overview = []\n",
+    "\n",
+    "for offset in nltk_concordance_index.offsets(\"Section\"):\n",
+    "    section_overview.append([\n",
+    "        offset, # index\n",
+    "        word_tokens[offset], \n",
+    "        word_tokens[offset + 1], \n",
+    "        word_tokens[offset + 2]\n",
+    "    ])\n",
+    "    \n",
+    "section_overview"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'12'"
+      ]
+     },
+     "execution_count": 65,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Fuction that find section of an index number\n",
+    "\n",
+    "def get_section_from_word_index_number(word_index_number):\n",
+    "    \n",
+    "    last_section_memory = []\n",
+    "    \n",
+    "    for section in section_overview:\n",
+    "        if section[0] < word_index_number:\n",
+    "            last_section_memory.append(section[2])\n",
+    "        else:\n",
+    "            break\n",
+    "            \n",
+    "    # returns the last section or empty list\n",
+    "    result_in_a_array = last_section_memory[-1:]\n",
+    "    \n",
+    "    # return as string\n",
+    "    return result_in_a_array[0]\n",
+    "\n",
+    "get_section_from_word_index_number(1000)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[740, '10', 'not', 'less', 'than', 'the', 'smoke']\n",
+      "[1017, '12', 'cm', 'larger', 'than', 'the', 'smoke']\n",
+      "[1118, '12', 'placed', 'closer', 'than', '10', 'cm']\n",
+      "[1210, '12', 'be', 'closer', 'than', '2', 'cm']\n",
+      "[1614, '15', 'of', 'less', 'than', '10.67', 'metres']\n",
+      "[1812, '16', 'of', 'less', 'than', '10.67', 'meters']\n",
+      "[2613, '23', 'of', 'more', 'than', '50', 'V']\n",
+      "[2665, '23', 'of', 'more', 'than', '50', 'V']\n",
+      "[2883, '24', 'not', 'less', 'than', '43°C', '(']\n"
+     ]
+    }
+   ],
+   "source": [
+    "#\n",
+    "# Find something\n",
+    "#\n",
+    "\n",
+    "for offset in nltk_concordance_index.offsets(\"than\"):\n",
+    "    print([\n",
+    "        offset, # index\n",
+    "        get_section_from_word_index_number(offset),\n",
+    "        word_tokens[offset - 2], \n",
+    "        word_tokens[offset - 1], \n",
+    "        word_tokens[offset], \n",
+    "        word_tokens[offset + 1], \n",
+    "        word_tokens[offset + 2]\n",
+    "    ])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n",
+      "True\n",
+      "False\n"
+     ]
+    }
+   ],
+   "source": [
+    "def is_int(n):\n",
+    "    try:\n",
+    "        float_n = float(n)\n",
+    "        int_n = int(float_n)\n",
+    "    except ValueError:\n",
+    "        return False\n",
+    "    else:\n",
+    "        return float_n == int_n\n",
+    "\n",
+    "# test\n",
+    "print(is_int('test'))\n",
+    "print(is_int('4'))\n",
+    "print(is_int('4.5'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n",
+      "True\n",
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "def is_float(n):\n",
+    "    try:\n",
+    "        float_n = float(n)\n",
+    "    except ValueError:\n",
+    "        return False\n",
+    "    else:\n",
+    "        return True\n",
+    "    \n",
+    "# test\n",
+    "print(is_float('test'))\n",
+    "print(is_float('4'))\n",
+    "print(is_float('4.5'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 89,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1118, '12', 'placed', 'closer', 'than', '10', 'cm']\n",
+      "[1210, '12', 'be', 'closer', 'than', '2', 'cm']\n",
+      "[1614, '15', 'of', 'less', 'than', '10.67', 'metres']\n",
+      "[1812, '16', 'of', 'less', 'than', '10.67', 'meters']\n",
+      "[2613, '23', 'of', 'more', 'than', '50', 'V']\n",
+      "[2665, '23', 'of', 'more', 'than', '50', 'V']\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[{'10.67', 'Section 15', 'less than', 'meters'},\n",
+       " {'10.67', 'Section 16', 'less than', 'meters'}]"
+      ]
+     },
+     "execution_count": 89,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#\n",
+    "# Find \"than\" + floats\n",
+    "#\n",
+    "\n",
+    "result_for_csv_file = []\n",
+    "\n",
+    "for offset in nltk_concordance_index.offsets(\"than\"):\n",
+    "\n",
+    "    if is_float(word_tokens[offset + 1]):\n",
+    "        print([\n",
+    "            offset, # index\n",
+    "            get_section_from_word_index_number(offset),\n",
+    "            word_tokens[offset - 2], \n",
+    "            word_tokens[offset - 1], \n",
+    "            word_tokens[offset], \n",
+    "            word_tokens[offset + 1], \n",
+    "            word_tokens[offset + 2]\n",
+    "        ])\n",
+    "        \n",
+    "        paragraph_number = \"Section \" + get_section_from_word_index_number(offset)\n",
+    "        relation = word_tokens[offset - 1] + \" \" + word_tokens[offset]\n",
+    "        value_1 = word_tokens[offset + 1]\n",
+    "        value_2 = word_tokens[offset + 2]\n",
+    "        \n",
+    "        if value_2 == \"meters\" or value_2 == \"metres\": #misspelling\n",
+    "            result_for_csv_file.append({\n",
+    "                paragraph_number,\n",
+    "                relation,\n",
+    "                value_1,\n",
+    "                \"meters\"\n",
+    "                })\n",
+    "        \n",
+    "list(result_for_csv_file)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 90,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import csv\n",
+    "wtr = csv.writer(open (\"output - Get scope - Vessel length overall.csv\", 'w'), delimiter=',', lineterminator='\\n')\n",
+    "for x in result_for_csv_file : wtr.writerow ([x])"
    ]
   }
  ],
