Get vessel length with the word "to". #6

--- a/NLP Python Jupyter Notebooks/Get scope - Vessel length overall/Get scope - Vessel length overall.ipynb
+++ b/NLP Python Jupyter Notebooks/Get scope - Vessel length overall/Get scope - Vessel length overall.ipynb
@@ -5166,7 +5166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 105,
    "metadata": {},
    "outputs": [
     {
@@ -5184,11 +5184,11 @@
     {
      "data": {
       "text/plain": [
-       "[{'10.67', 'Section 15', 'less than', 'meters'},\n",
-       " {'10.67', 'Section 16', 'less than', 'meters'}]"
+       "[['Section 15', 'less than', '10.67', 'meters'],\n",
+       " ['Section 16', 'less than', '10.67', 'meters']]"
       ]
      },
-     "execution_count": 89,
+     "execution_count": 105,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5198,7 +5198,7 @@
     "# Find \"than\" + floats\n",
     "#\n",
     "\n",
-    "result_for_csv_file = []\n",
+    "result_for_csv_file_than = []\n",
     "\n",
     "for offset in nltk_concordance_index.offsets(\"than\"):\n",
     "\n",
@@ -5219,25 +5219,111 @@
     "        value_2 = word_tokens[offset + 2]\n",
     "        \n",
     "        if value_2 == \"meters\" or value_2 == \"metres\": #misspelling\n",
-    "            result_for_csv_file.append({\n",
+    "            result_for_csv_file_than.append([\n",
     "                paragraph_number,\n",
     "                relation,\n",
     "                value_1,\n",
     "                \"meters\"\n",
-    "                })\n",
+    "                ])\n",
     "        \n",
-    "list(result_for_csv_file)"
+    "list(result_for_csv_file_than)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 106,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[810, '10', '8', 'to', '15', 'metres']\n",
+      "[1158, '12', 'reduced', 'to', '5', 'cm']\n",
+      "[1506, '15', '10.67', 'to', '15', 'metres']\n",
+      "[1768, '16', '10.67', 'to', '15', 'metres']\n",
+      "[2508, '23', '6', 'to', '15', 'metres']\n",
+      "[2526, '23', 'up', 'to', '50', 'V']\n",
+      "[2551, '23', '6', 'to', '15', 'metres']\n",
+      "[2569, '23', 'up', 'to', '50', 'V']\n",
+      "[2593, '23', '6', 'to', '15', 'metres']\n",
+      "[2647, '23', '6', 'to', '15', 'metres']\n",
+      "[2717, '24', '10.67', 'to', '15', 'metres']\n",
+      "[2906, '24', 'listed', 'to', '22.5', 'degrees']\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[['Section 10', 'to', '8', '15', 'meters'],\n",
+       " ['Section 15', 'to', '10.67', '15', 'meters'],\n",
+       " ['Section 16', 'to', '10.67', '15', 'meters'],\n",
+       " ['Section 23', 'to', '6', '15', 'meters'],\n",
+       " ['Section 23', 'to', '6', '15', 'meters'],\n",
+       " ['Section 23', 'to', '6', '15', 'meters'],\n",
+       " ['Section 23', 'to', '6', '15', 'meters'],\n",
+       " ['Section 24', 'to', '10.67', '15', 'meters']]"
+      ]
+     },
+     "execution_count": 106,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#\n",
+    "# Find \"to\" + floats\n",
+    "#\n",
+    "\n",
+    "result_for_csv_file_to = []\n",
+    "\n",
+    "for offset in nltk_concordance_index.offsets(\"to\"):\n",
+    "\n",
+    "    if is_float(word_tokens[offset + 1]):\n",
+    "        \n",
+    "        print([\n",
+    "            offset, # index\n",
+    "            get_section_from_word_index_number(offset),\n",
+    "            word_tokens[offset - 1], \n",
+    "            word_tokens[offset], \n",
+    "            word_tokens[offset + 1], \n",
+    "            word_tokens[offset + 2]\n",
+    "        ])\n",
+    "        \n",
+    "        paragraph_number = \"Section \" + get_section_from_word_index_number(offset)\n",
+    "        value_2 = word_tokens[offset + 1]\n",
+    "        \n",
+    "        if is_float(word_tokens[offset - 1]):\n",
+    "            value_1 = word_tokens[offset - 1]\n",
+    "            relation = word_tokens[offset]\n",
+    "        else:\n",
+    "            value_1 = ''\n",
+    "            relation = word_tokens[offset - 1] + \" \" + word_tokens[offset]\n",
+    "        \n",
+    "        if word_tokens[offset + 2] == \"meters\" or word_tokens[offset + 2] == \"metres\": #misspelling\n",
+    "            result_for_csv_file_to.append([\n",
+    "                paragraph_number,\n",
+    "                relation,\n",
+    "                value_1,\n",
+    "                value_2,\n",
+    "                \"meters\"\n",
+    "                ])\n",
+    "        \n",
+    "list(result_for_csv_file_to)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 107,
    "metadata": {},
    "outputs": [],
    "source": [
     "import csv\n",
     "wtr = csv.writer(open (\"output - Get scope - Vessel length overall.csv\", 'w'), delimiter=',', lineterminator='\\n')\n",
-    "for x in result_for_csv_file : wtr.writerow ([x])"
+    "for x in result_for_csv_file_than : wtr.writerow ([x])\n",
+    "for x in result_for_csv_file_to : wtr.writerow ([x])"
    ]
   }
  ],
