Identify machine power. #6

--- a/NLP Python Jupyter Notebooks/Get scope - Machine power/Get scope - Machine power.ipynb
+++ b/NLP Python Jupyter Notebooks/Get scope - Machine power/Get scope - Machine power.ipynb
@@ -11,11 +11,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Requirement already satisfied: nltk in /opt/conda/lib/python3.8/site-packages (3.5)\r\n",
-      "Requirement already satisfied: tqdm in /opt/conda/lib/python3.8/site-packages (from nltk) (4.51.0)\r\n",
-      "Requirement already satisfied: joblib in /opt/conda/lib/python3.8/site-packages (from nltk) (0.17.0)\r\n",
-      "Requirement already satisfied: click in /opt/conda/lib/python3.8/site-packages (from nltk) (7.1.2)\r\n",
-      "Requirement already satisfied: regex in /opt/conda/lib/python3.8/site-packages (from nltk) (2020.11.13)\r\n"
+      "Requirement already satisfied: nltk in /opt/conda/lib/python3.8/site-packages (3.5)\n",
+      "Requirement already satisfied: tqdm in /opt/conda/lib/python3.8/site-packages (from nltk) (4.51.0)\n",
+      "Requirement already satisfied: regex in /opt/conda/lib/python3.8/site-packages (from nltk) (2020.11.13)\n",
+      "Requirement already satisfied: click in /opt/conda/lib/python3.8/site-packages (from nltk) (7.1.2)\n",
+      "Requirement already satisfied: joblib in /opt/conda/lib/python3.8/site-packages (from nltk) (0.17.0)\n"
      ]
     }
    ],
@@ -495,7 +495,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -1504,7 +1504,7 @@
        " ...]"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1518,7 +1518,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -4508,19 +4508,23 @@
        "  '.']]"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "from nltk.tokenize.punkt import PunktSentenceTokenizer\n",
+    "\n",
+    "pst = PunktSentenceTokenizer()\n",
+    "\n",
     "sentences = pst.sentences_from_tokens(word_tokens)\n",
     "list(sentences)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -4529,7 +4533,7 @@
        "['electric', 'installations', 'Section']"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4541,7 +4545,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -4688,7 +4692,7 @@
        " 'Equivalents Vessels constructed pursuant to Nordic Boat Standard (1990) are considered to satisfy the requirements of sections 18, 19 and 20.']"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4698,10 +4702,6 @@
     "# Det gir ikkje meining å smelete setningar saman når ein leiter etter ord som høyrer saman.\n",
     "# Vi leitar derfor etter ord som høyrer saman innanfor ein setning.\n",
     "\n",
-    "from nltk.tokenize.punkt import PunktSentenceTokenizer\n",
-    "\n",
-    "pst = PunktSentenceTokenizer()\n",
-    "\n",
     "sent_tokens = pst.tokenize(one_text)\n",
     "\n",
     "sent_tokens"
@@ -4709,7 +4709,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {
     "scrolled": true
    },
@@ -4858,14 +4858,12 @@
        " (16069, 16210)]"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# TODO: Find sections\n",
-    "\n",
     "# get the span of the sentences\n",
     "t = pst.span_tokenize(one_text)\n",
     "list(t)"
@@ -4873,7 +4871,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -4911,7 +4909,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4920,7 +4918,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -4938,7 +4936,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -4956,7 +4954,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -4975,7 +4973,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -5002,7 +5000,7 @@
        " [3028, 'Section', '25', '.']]"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5027,7 +5025,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -5036,7 +5034,7 @@
        "'12'"
       ]
      },
-     "execution_count": 65,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5065,7 +5063,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 19,
    "metadata": {
     "scrolled": true
    },
@@ -5105,7 +5103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -5136,7 +5134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -5166,7 +5164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -5184,11 +5182,11 @@
     {
      "data": {
       "text/plain": [
-       "[['Section 15', 'less than', '10.67', 'meters'],\n",
-       " ['Section 16', 'less than', '10.67', 'meters']]"
+       "[['Section 23', 'more than', '50', 'V'],\n",
+       " ['Section 23', 'more than', '50', 'V']]"
       ]
      },
-     "execution_count": 105,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5218,12 +5216,12 @@
     "        value_1 = word_tokens[offset + 1]\n",
     "        value_2 = word_tokens[offset + 2]\n",
     "        \n",
-    "        if value_2 == \"meters\" or value_2 == \"metres\": #misspelling\n",
+    "        if word_tokens[offset + 2] == \"V\":\n",
     "            result_for_csv_file_than.append([\n",
     "                paragraph_number,\n",
     "                relation,\n",
     "                value_1,\n",
-    "                \"meters\"\n",
+    "                word_tokens[offset + 2]\n",
     "                ])\n",
     "        \n",
     "list(result_for_csv_file_than)"
@@ -5231,7 +5229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 26,
    "metadata": {
     "scrolled": true
    },
@@ -5257,17 +5255,10 @@
     {
      "data": {
       "text/plain": [
-       "[['Section 10', 'to', '8', '15', 'meters'],\n",
-       " ['Section 15', 'to', '10.67', '15', 'meters'],\n",
-       " ['Section 16', 'to', '10.67', '15', 'meters'],\n",
-       " ['Section 23', 'to', '6', '15', 'meters'],\n",
-       " ['Section 23', 'to', '6', '15', 'meters'],\n",
-       " ['Section 23', 'to', '6', '15', 'meters'],\n",
-       " ['Section 23', 'to', '6', '15', 'meters'],\n",
-       " ['Section 24', 'to', '10.67', '15', 'meters']]"
+       "[['Section 23', 'up to', '50', 'V'], ['Section 23', 'up to', '50', 'V']]"
       ]
      },
-     "execution_count": 106,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5302,13 +5293,12 @@
     "            value_1 = ''\n",
     "            relation = word_tokens[offset - 1] + \" \" + word_tokens[offset]\n",
     "        \n",
-    "        if word_tokens[offset + 2] == \"meters\" or word_tokens[offset + 2] == \"metres\": #misspelling\n",
+    "        if word_tokens[offset + 2] == \"V\":\n",
     "            result_for_csv_file_to.append([\n",
     "                paragraph_number,\n",
     "                relation,\n",
-    "                value_1,\n",
     "                value_2,\n",
-    "                \"meters\"\n",
+    "                word_tokens[offset + 2]\n",
     "                ])\n",
     "        \n",
     "list(result_for_csv_file_to)"
@@ -5316,12 +5306,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
     "import csv\n",
-    "wtr = csv.writer(open (\"output - Get scope - Vessel length overall.csv\", 'w'), delimiter=',', lineterminator='\\n')\n",
+    "wtr = csv.writer(open (\"output - Get scope - Machine power.csv\", 'w'), delimiter=',', lineterminator='\\n')\n",
     "for x in result_for_csv_file_than : wtr.writerow ([x])\n",
     "for x in result_for_csv_file_to : wtr.writerow ([x])"
    ]
