--- a/NLP Python Jupyter Notebooks/Get scope - Machine power/Get scope - Machine power.ipynb
+++ b/NLP Python Jupyter Notebooks/Get scope - Machine power/Get scope - Machine power.ipynb
@@ -5306,7 +5306,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# TODO: Prøv å sjekk på V, meter osv"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
