--- a/NLP Python Jupyter Notebooks/Get nouns - Two words/Get nouns - Two words.ipynb
+++ b/NLP Python Jupyter Notebooks/Get nouns - Two words/Get nouns - Two words.ipynb
@@ -9817,6 +9817,15 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# TODO: Veronika: kan vi klassifisere desse?"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 43,
    "metadata": {},
    "outputs": [],
