To much output. Fix. #6

--- a/NLP Python Jupyter Notebooks/Get scope - Built date/Get scope - Built date.ipynb
+++ b/NLP Python Jupyter Notebooks/Get scope - Built date/Get scope - Built date.ipynb
@@ -5266,7 +5266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -5285,16 +5285,16 @@
     {
      "data": {
       "text/plain": [
-       "[['Section 7', 'after', '2 January 1988', 'January'],\n",
-       " ['Section 8', 'after', '1 January 1992', 'January'],\n",
-       " ['Section 15', 'after', '1 January 1992', 'January'],\n",
-       " ['Section 22', 'after', '1 January 1992', 'January'],\n",
-       " ['Section 23', 'after', '1 January 1992', 'January'],\n",
-       " ['Section 23', 'after', '1 January 2002', 'January'],\n",
-       " ['Section 24', 'after', '1 January 1992', 'January']]"
+       "[['Section 7', 'after', '2 January 1988'],\n",
+       " ['Section 8', 'after', '1 January 1992'],\n",
+       " ['Section 15', 'after', '1 January 1992'],\n",
+       " ['Section 22', 'after', '1 January 1992'],\n",
+       " ['Section 23', 'after', '1 January 1992'],\n",
+       " ['Section 23', 'after', '1 January 2002'],\n",
+       " ['Section 24', 'after', '1 January 1992']]"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5326,8 +5326,7 @@
     "            result_for_csv_file_after.append([\n",
     "                paragraph_number,\n",
     "                relation,\n",
-    "                value_1,\n",
-    "                word_tokens[offset + 2]\n",
+    "                value_1\n",
     "                ])\n",
     "        \n",
     "list(result_for_csv_file_after)"
@@ -5335,7 +5334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
