Fix CSV output.

--- a/NLP Python Jupyter Notebooks/Get scope - Built date/Get scope - Built date.ipynb
+++ b/NLP Python Jupyter Notebooks/Get scope - Built date/Get scope - Built date.ipynb
@@ -5162,7 +5162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -5179,14 +5179,14 @@
     {
      "data": {
       "text/plain": [
-       "[['Section 7', 'before', '2 January 1988', 'January'],\n",
-       " ['Section 8', 'before', '1 January 1992', 'January'],\n",
-       " ['Section 22', 'before', '1 January 1992', 'January'],\n",
-       " ['Section 23', 'before', '1 January 1992', 'January'],\n",
-       " ['Section 24', 'before', '1 January 1992', 'January']]"
+       "[['Section 7', 'before', '2 January 1988'],\n",
+       " ['Section 8', 'before', '1 January 1992'],\n",
+       " ['Section 22', 'before', '1 January 1992'],\n",
+       " ['Section 23', 'before', '1 January 1992'],\n",
+       " ['Section 24', 'before', '1 January 1992']]"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5218,8 +5218,7 @@
     "            result_for_csv_file_before.append([\n",
     "                paragraph_number,\n",
     "                relation,\n",
-    "                value_1,\n",
-    "                word_tokens[offset + 2]\n",
+    "                value_1\n",
     "                ])\n",
     "        \n",
     "list(result_for_csv_file_before)"
@@ -5334,14 +5333,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
     "import csv\n",
-    "wtr = csv.writer(open (\"output - Get scope - Built date.csv\", 'w'), delimiter=',', lineterminator='\\n')\n",
-    "for x in result_for_csv_file_before : wtr.writerow ([x])\n",
-    "for x in result_for_csv_file_after : wtr.writerow ([x])"
+    "\n",
+    "with open(\"output - Get scope - Built date.csv\", 'w') as f:\n",
+    "    write = csv.writer(f, delimiter=',', lineterminator='\\n')\n",
+    "    \n",
+    "    write.writerows(result_for_csv_file_before)\n",
+    "    write.writerows(result_for_csv_file_after)"
    ]
   }
  ],
