Getting closer to identify relevant Nouns. #3

--- a/NLP Python Jupyter Notebooks/Identify data type properties/Identify data type properties.ipynb
+++ b/NLP Python Jupyter Notebooks/Identify data type properties/Identify data type properties.ipynb
@@ -9500,9 +9500,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 97,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(1057, 105, 'electrical', 'JJ'),\n",
+       " (1058, 105, 'installation', 'NNS'),\n",
+       " (1059, 105, 'vessel', 'NNP'),\n",
+       " (1061, 105, 'overall', 'JJ'),\n",
+       " (1063, 105, 'construct', 'VBD'),\n",
+       " (1064, 105, 'january', 'NNP'),\n",
+       " (1065, 105, 'electrical', 'JJ'),\n",
+       " (1066, 105, 'installation', 'NNS'),\n",
+       " (1069, 105, 'satisfy', 'VB'),\n",
+       " (1070, 105, 'requirement', 'NNS'),\n",
+       " (1071, 105, 'nordic', 'NNP'),\n",
+       " (1072, 105, 'boat', 'NNP'),\n",
+       " (1073, 105, 'standard', 'NNP'),\n",
+       " (1074, 105, 'electrical', 'JJ'),\n",
+       " (1075, 105, 'installation', 'NNS')]"
+      ]
+     },
+     "execution_count": 97,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "#\n",
     "# TODO: Find known words in line\n",
@@ -9511,7 +9536,88 @@
     "# Next up, can we identify the thing we are talking about?\n",
     "#\n",
     "# Idea: Remove the identified words from the sentences before continuing to searching in them\n",
-    "\n"
+    "\n",
+    "selected_line_in_a_list_of_words = []\n",
+    "list_of_earlier_findings = ['v', 'voltage','length','metres']\n",
+    "\n",
+    "for (word_index_number,line_index_number,word_in_text,pos) in word_index_for_lookup:\n",
+    "    if line_index_number == 105:\n",
+    "        selected_line_in_a_list_of_words.append((word_index_number,line_index_number,word_in_text,pos))\n",
+    "\n",
+    "line_with_findings_removed = [(word_index_number,line_index_number,word_in_text,pos) for (word_index_number,line_index_number,word_in_text,pos) in selected_line_in_a_list_of_words if word_in_text not in list_of_earlier_findings]\n",
+    "line_with_findings_removed"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 99,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(1059, 105, 'vessel', 'NNP')\n",
+      "(1064, 105, 'january', 'NNP')\n",
+      "(1071, 105, 'nordic', 'NNP')\n",
+      "(1072, 105, 'boat', 'NNP')\n",
+      "(1073, 105, 'standard', 'NNP')\n"
+     ]
+    }
+   ],
+   "source": [
+    "test = [(1057, 105, 'electrical', 'JJ'),\n",
+    " (1058, 105, 'installation', 'NNS'),\n",
+    " (1059, 105, 'vessel', 'NNP'),\n",
+    " (1061, 105, 'overall', 'JJ'),\n",
+    " (1063, 105, 'construct', 'VBD'),\n",
+    " (1064, 105, 'january', 'NNP'),\n",
+    " (1065, 105, 'electrical', 'JJ'),\n",
+    " (1066, 105, 'installation', 'NNS'),\n",
+    " (1069, 105, 'satisfy', 'VB'),\n",
+    " (1070, 105, 'requirement', 'NNS'),\n",
+    " (1071, 105, 'nordic', 'NNP'),\n",
+    " (1072, 105, 'boat', 'NNP'),\n",
+    " (1073, 105, 'standard', 'NNP'),\n",
+    " (1074, 105, 'electrical', 'JJ'),\n",
+    " (1075, 105, 'installation', 'NNS')]\n",
+    "\n",
+    "for (word_index_number,line_index_number,word_in_text,pos) in test:\n",
+    "    if pos.startswith('NNP'):\n",
+    "        print((word_index_number,line_index_number,word_in_text,pos))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 101,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(1059, 105, 'vessel', 'NNP'),\n",
+       " (1071, 105, 'nordic', 'NNP'),\n",
+       " (1072, 105, 'boat', 'NNP'),\n",
+       " (1073, 105, 'standard', 'NNP')]"
+      ]
+     },
+     "execution_count": 101,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "test2 = [\n",
+    "    (1059, 105, 'vessel', 'NNP'),\n",
+    "    #(1064, 105, 'january', 'NNP'),\n",
+    "    (1071, 105, 'nordic', 'NNP'),\n",
+    "    (1072, 105, 'boat', 'NNP'),\n",
+    "    (1073, 105, 'standard', 'NNP')\n",
+    "]\n",
+    "\n",
+    "# her ser ein eit mønster 1071 + 1072 + 1073 == nordic boat standard\n",
+    "\n",
+    "test2"
    ]
   }
  ],
