--- a/NLP Python Jupyter Notebooks/Identify data type properties/Identify data type properties.ipynb
+++ b/NLP Python Jupyter Notebooks/Identify data type properties/Identify data type properties.ipynb
@@ -9615,7 +9615,12 @@
     "    (1073, 105, 'standard', 'NNP')\n",
     "]\n",
     "\n",
+    "# TODO: remove all the months\n",
     "# her ser ein eit mønster 1071 + 1072 + 1073 == nordic boat standard\n",
+    "\n",
+    "# TODO: create CSV with suggestions of things of new things\n",
+    "\n",
+    "# TODO: suggest things we know, that we find, list_of_known_things = ['vessel', 'emergency light', 'pipe system', 'pipe', 'fire extinguisher']\n",
     "\n",
     "test2"
    ]
