Created dictionary with findings of known_data_types_in_line. #3

--- a/NLP Python Jupyter Notebooks/Identify data type properties/Identify data type properties.ipynb
+++ b/NLP Python Jupyter Notebooks/Identify data type properties/Identify data type properties.ipynb
@@ -9439,6 +9439,132 @@
     "\n",
     "test2"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(38, 'cm'),\n",
+       " (40, 'mm'),\n",
+       " (42, 'cm'),\n",
+       " (44, 'cm'),\n",
+       " (45, 'cm'),\n",
+       " (48, 'cm'),\n",
+       " (49, 'cm'),\n",
+       " (49, 'cm'),\n",
+       " (52, 'cm'),\n",
+       " (76, 'metres'),\n",
+       " (89, 'cm'),\n",
+       " (105, 'metres'),\n",
+       " (105, 'v'),\n",
+       " (106, 'v'),\n",
+       " (107, 'v'),\n",
+       " (109, 'v')]"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# List the findings\n",
+    "\n",
+    "listiii = []\n",
+    "\n",
+    "for (word_we_know, index_of_lines_with_a_match) in known_data_types_in_line:\n",
+    "    for index_of_line in index_of_lines_with_a_match:\n",
+    "        listiii.append((index_of_line,word_we_know))\n",
+    "\n",
+    "sortedList = sorted(listiii, key = lambda y: (y[0]))\n",
+    "sortedList"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "First detection in sentence 38 - cm\n",
+      "First detection in sentence 42 - cm\n",
+      "First detection in sentence 44 - cm\n",
+      "First detection in sentence 45 - cm\n",
+      "First detection in sentence 48 - cm\n",
+      "First detection in sentence 49 - cm\n",
+      "New detection in sentence 49 - cm\n",
+      "First detection in sentence 52 - cm\n",
+      "First detection in sentence 89 - cm\n",
+      "First detection in sentence 76 - metres\n",
+      "First detection in sentence 105 - metres\n",
+      "New detection in sentence 105 - v\n",
+      "First detection in sentence 106 - v\n",
+      "First detection in sentence 107 - v\n",
+      "First detection in sentence 109 - v\n",
+      "First detection in sentence 40 - mm\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "defaultdict(int,\n",
+       "            {38: ['cm'],\n",
+       "             42: ['cm'],\n",
+       "             44: ['cm'],\n",
+       "             45: ['cm'],\n",
+       "             48: ['cm'],\n",
+       "             49: ['cm'],\n",
+       "             52: ['cm'],\n",
+       "             89: ['cm'],\n",
+       "             76: ['metres'],\n",
+       "             105: ['metres', 'v'],\n",
+       "             106: ['v'],\n",
+       "             107: ['v'],\n",
+       "             109: ['v'],\n",
+       "             40: ['mm']})"
+      ]
+     },
+     "execution_count": 62,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Create dictionary with findings of known_data_types_in_line\n",
+    "# The dictionary key is the index number of the line\n",
+    "\n",
+    "from collections import defaultdict\n",
+    "\n",
+    "dictionary_with_known_data_types_in_a_sentence = defaultdict(int)\n",
+    "\n",
+    "for (word_we_know, index_of_lines_with_a_match) in known_data_types_in_line:\n",
+    "    \n",
+    "    for index_of_line in index_of_lines_with_a_match:\n",
+    "        \n",
+    "        if index_of_line not in dictionary_with_known_data_types_in_a_sentence:\n",
+    "            \n",
+    "            print('First detection in sentence ' + str(index_of_line) + \" - \" + word_we_know)\n",
+    "            \n",
+    "            # Add to dictionary\n",
+    "            dictionary_with_known_data_types_in_a_sentence[index_of_line] = [word_we_know]\n",
+    "            \n",
+    "        else: # a detection in sentence is already added\n",
+    "            \n",
+    "            print('New detection in sentence ' + str(index_of_line) + \" - \" + word_we_know)\n",
+    "            \n",
+    "            # Add if it is a new word\n",
+    "            if word_we_know not in dictionary_with_known_data_types_in_a_sentence[index_of_line]:\n",
+    "                dictionary_with_known_data_types_in_a_sentence[index_of_line].append(word_we_know)\n",
+    "                \n",
+    "dictionary_with_known_data_types_in_a_sentence"
+   ]
   }
  ],
  "metadata": {
